fix for laravel nova applying overflow-hidden to card elements

--- a/resources/css/tiptap.css
+++ b/resources/css/tiptap.css
@@ -4,27 +4,27 @@
     padding: 0.5em;
     background: #282a36;
   }
-  
+
   .hljs-built_in,
   .hljs-selector-tag,
   .hljs-section,
   .hljs-link {
     color: #8be9fd;
   }
-  
+
   .hljs-keyword {
     color: #ff79c6;
   }
-  
+
   .hljs,
   .hljs-subst {
     color: #f8f8f2;
   }
-  
+
   .hljs-title {
     color: #50fa7b;
   }
-  
+
   .hljs-string,
   .hljs-meta,
   .hljs-name,
@@ -38,13 +38,13 @@
   .hljs-template-variable {
     color: #f1fa8c;
   }
-  
+
   .hljs-comment,
   .hljs-quote,
   .hljs-deletion {
     color: #6272a4;
   }
-  
+
   .hljs-keyword,
   .hljs-selector-tag,
   .hljs-literal,
@@ -56,13 +56,16 @@
   .hljs-strong {
     font-weight: bold;
   }
-  
+
   .hljs-literal,
   .hljs-number {
     color: #bd93f9;
   }
-  
+
   .hljs-emphasis {
     font-style: italic;
   }
-  
+
+div.relative.overflow-hidden:has(.nova-tiptap-editor) {
+  overflow: visible;
+}
